@@ -1,6 +1,9 @@
 ﻿===== trunk  =====
 18.12.2011
 - bufix strings ending with " in multiline strings of config files failed to compile {isse 67)
+- added chaining to Smarty_Internal_Templatebase
+- changed unloadFilter() to not return a boolean in favor of chaining and API conformity
+- bugfix unregisterObject() raised notice when object to unregister did not exist
 
 17.12.2011
 - improvement of compiling speed by new handling of plain text blocks in the lexer/parser (issue 68)
